<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/_24sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/close_button"
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_10sdp"
        android:src="@drawable/ic_cross"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_17sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_17sdp"
        android:text="@string/enter"
        android:textColor="@color/bolder_text"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/close_button"
        app:layout_constraintStart_toEndOf="@id/close_button"
        app:layout_constraintTop_toTopOf="@id/close_button" />

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/black"
        android:alpha="0.1"
        app:layout_constraintTop_toBottomOf="@id/close_button"
        android:layout_marginTop="@dimen/_18sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/enter_user_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:text="@string/enter_subtitle"
        android:textColor="@color/bolder_text"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/enter_user_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_user_text"
        android:layout_marginEnd="@dimen/_17sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_user_subtitle"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_13sdp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enter_user_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_button"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/ic_button_layout"
        android:text="@string/enter_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/continue_button"
        app:layout_constraintTop_toBottomOf="@id/continue_button"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/forgot_password"
        android:textColor="@color/blue_text"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/continue_button"
        app:layout_constraintTop_toBottomOf="@id/continue_button"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/regisration"
        android:textColor="@color/blue_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>