<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_contacts"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/bolder_text"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/contacts_image"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_93sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:src="@drawable/contacts_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_contacts" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contacts_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_subtitle"
        android:gravity="center"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="@+id/contacts_image"
        app:layout_constraintStart_toStartOf="@+id/contacts_image"
        app:layout_constraintTop_toBottomOf="@+id/contacts_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contacts_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_11sdp"
        android:text="@string/contacts_text"
        android:gravity="center"
        android:layout_marginTop="@dimen/_7sdp"
        app:layout_constraintTop_toBottomOf="@id/contacts_subtitle"
        app:layout_constraintStart_toStartOf="@id/contacts_subtitle"
        app:layout_constraintEnd_toEndOf="@id/contacts_subtitle"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/faq_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/ic_button_tell_us"
        android:text="@string/faq_button_title"
        android:textAllCaps="false"
        android:textColor="@color/blue_text"
        android:textSize="@dimen/_13sdp"
        android:layout_marginBottom="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/call_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/call_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/ic_button_layout"
        android:text="@string/call_button_title"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:textSize="@dimen/_13sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>