<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="16dp"
    android:background="@drawable/ic_details_layout">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passenger_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passenger"
        android:textSize="17sp"
        android:textColor="@color/bolder_text"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passenger_age_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:layout_marginStart="16dp"
        tools:text="Взрослый"
        app:layout_constraintStart_toEndOf="@id/passenger_number"
        app:layout_constraintTop_toTopOf="@id/passenger_number"
        app:layout_constraintBottom_toBottomOf="@id/passenger_number"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_men"
        android:layout_width="147dp"
        android:layout_height="40dp"
        android:text="@string/men"
        android:textAllCaps="false"
        android:background="@drawable/ic_layout_button"
        app:layout_constraintTop_toBottomOf="@id/passenger_number"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_women"
        android:layout_width="147dp"
        android:layout_height="40dp"
        android:text="@string/women"
        android:textAllCaps="false"
        android:background="@drawable/ic_layout_button"
        app:layout_constraintTop_toBottomOf="@id/passenger_number"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_men">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passenger_data_iin_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/iin"
            android:background="@drawable/ic_textfield_layout"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iin_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passenger_data_lastname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:background="@drawable/ic_textfield_layout"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_lastname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passenger_data_firstname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:background="@drawable/ic_textfield_layout"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>