<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:textSize="@dimen/_16sdp"
        android:text="@string/title_user"
        android:textColor="@color/bolder_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="@string/enter"
        android:textColor="@color/bolder_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_email_layout"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="@dimen/_290sdp"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:hint="@string/email"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_enter">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_password_layout"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="@dimen/_290sdp"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            app:boxBackgroundMode="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/search_trip_button"
        android:layout_width="@dimen/_290sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_17sdp"
        android:background="@drawable/ic_button_layout"
        android:text="@string/enter_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_password_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>