<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/_24sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/close_button"
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_10sdp"
        android:src="@drawable/ic_cross"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_17sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_17sdp"
        android:text="@string/language_title"
        android:textColor="@color/bolder_text"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/close_button"
        app:layout_constraintStart_toEndOf="@id/close_button"
        app:layout_constraintTop_toTopOf="@id/close_button" />

    <View
        android:id="@+id/separator_one"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/black"
        android:alpha="0.1"
        app:layout_constraintTop_toBottomOf="@id/close_button"
        android:layout_marginTop="@dimen/_18sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/kazakh_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_one"
        android:text="@string/kazakh_language"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/black"/>

    <View
        android:id="@+id/separator_two"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/black"
        android:alpha="0.1"
        app:layout_constraintTop_toBottomOf="@id/kazakh_tv"
        android:layout_marginTop="@dimen/_12sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/russian_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_two"
        android:text="@string/russian_language"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/black"/>

    <View
        android:id="@+id/separator_three"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/black"
        android:alpha="0.1"
        app:layout_constraintTop_toBottomOf="@id/russian_tv"
        android:layout_marginTop="@dimen/_12sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>